Fix for Image alignment/caption.

--- a/docroot/themes/custom/epa_intranet/assets/scss/global.scss
+++ b/docroot/themes/custom/epa_intranet/assets/scss/global.scss
@@ -1300,3 +1300,20 @@ div.box__title, .box--special > .box__title {
     width: 100%;
   }  
 }
+
+/* IN-851 */
+figure.caption {
+    display: flex;
+    flex-direction: column;
+}
+article {
+  &.align-center + figcaption {
+    text-align: center;
+  }
+  &.align-right + figcaption {
+    text-align: right;
+  }
+  &.align-left + figcaption {
+    text-align: left;
+  }
+}  
